--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,10 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <!-- GOOGLE -->
+    <script src="https://apis.google.com/js/platform.js"></script>
+    <meta name="google-signin-client_id" content="261593095133-4aok4t6ceou0e46okmm5e9oni5oo6ceo.apps.googleusercontent.com">
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
